generated-tests/tests/snapshots/tsx/tsx__test_generated_array.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
[item1, item2]

AST:
(program
  (expression_statement
    (array
      (identifier item1)
      (identifier item2)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
