generated-tests/tests/snapshots/tsx/tsx__test_generated_array_pattern.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const [a, b] = array;

AST:
(program
  (lexical_declaration
    (variable_declarator
      (array_pattern
        (identifier a)
        (identifier b)
      )
      (identifier array)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "[a, b]",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
