generated-tests/tests/snapshots/tsx/tsx__test_generated_arrow_function.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
(x: number) => x + y

AST:
(program
  (expression_statement
    (arrow_function
      (formal_parameters
        (required_parameter
          (identifier x)
          (type_annotation
            (predefined_type)
          )
        )
      )
      (binary_expression
        (identifier x)
        (identifier y)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "x",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
