generated-tests/tests/snapshots/tsx/tsx__test_generated_as_expression.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
value4 as Type1

AST:
(program
  (expression_statement
    (as_expression
      (identifier value4)
      (type_identifier)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
